[package]
name = "windows-executor"
version = "0.2.0"
edition = "2021"
description = "Windows message loop driven async executor"
license = "MIT"
documentation = "https://docs.rs/windows-executor"
repository = "https://github.com/haileys/windows-executor"

[dependencies]
futures = { version = "0.3.30", default-features = false }
log = "0.4.20"
widestring = "1.0.2"

[dependencies.winapi]
version = "0.3"
features = [
    "errhandlingapi",
    "handleapi",
    "impl-default",
    "libloaderapi",
    "processthreadsapi",
    "winuser",
]
